things and stuff mostly